Fix issues with rendering on IE.

--- a/include/style/screen_ie.css
+++ b/include/style/screen_ie.css
@@ -14,20 +14,15 @@ TH.small {
 	width: 4.06504065%;
 }
 
-.columns H1,
 .columns SECTION {
 	margin: 0 1.953125% 0 1.953125%;
-}
-
-.columns SECTION {
 	width: 96.09375%;
 }
 
-.columns .three SECTION {
+.columns.three SECTION {
 	width: 29.427083333%;
 }
 
-.columns .two SECTION {
-	background-color: #ccc;
+.columns.two SECTION {
 	width: 46.09375%;
 }
